[package]
name = "neural_web"
version = "1.5.0"
edition = "2021"

[[bin]]
name = "neural_web_server"
path = "src/bin/server.rs"

[[bin]]
name = "neural_next_server"
path = "src/bin/next_server.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
dashmap = "6.0"
bytes = "1.5"
flate2 = "1.0"
md5 = "0.8.0"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
libc = "0.2"
socket2 = { version = "0.5.5", features = ["all"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
webp = "0.2"
